# dl-on-flink

./: .gitignore  .gitmodules  .readthedocs.yaml  .travis.yml  CONTRIBUTING.md  NOTICE  README.md  pom.xml  user.properties
.github/: pull_request_template.md
deep-learning-on-flink/: README.md  pom.xml  user.properties
dl-on-flink-dist/: pom.xml
dl-on-flink-examples/: pom.xml
dl-on-flink-framework/: pom.xml
dl-on-flink-lib/: pom.xml
dl-on-flink-tensorflow/python/: CMakeLists.txt  setup.py
dl-on-flink-tensorflow/python/dl_on_flink_tensorflow/: flink_row_writer.py  gpu_info.py  table_sinks.py  tensorflow_TFConfig.py  tensorflow_context.py  tensorflow_on_flink_ml.py  tensorflow_on_flink_mlconf.py  tensorflow_on_flink_table.py  tensorflow_on_flink_tfconf.py  tf_cluster_config.py  tf_utils.py  tfrecord_source_func.py  tfrecord_table_source.py  version.py
dl-on-flink-tensorflow/python/dl_on_flink_tensorflow/flink_ml/: tf_estimator.py  tf_estimator_constants.py  tf_multi_worker_entry.py
dl-on-flink-tensorflow/python/dl_on_flink_tensorflow/ops/: flink_encode_ops.cc  flink_writer_ops.cc  queue_file_system.cc
dl-on-flink-tensorflow/python/example/: tensorflow_on_flink_table.py
dl-on-flink-tensorflow/python/flink_ml_tensorflow/: table_sinks.py  tensorflow_on_flink_ml.py  version.py
dl-on-flink-tensorflow/python/tests/: file.py
dl-on-flink-tensorflow/python/tests/flink_ml_tensorflow/: __init__.py  add_one.py  test_flink_ml_api.py  test_flink_row_writer.py  test_pyflink_env.py  test_tf_cluster_config.py  test_tf_utils.py  utils.py
doc/: design.md  usage.md  (+6 more)
(+2495 files in other folders)
